--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=vcxvccvxccv">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=8ff023dfcc667192636115b886ce7c01">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
