提交修改产品详情页

--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=149fb6b25102600cd9303f0e64722122">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=4304aa5ea8c435fbc34a9708c52b98ac">
 
 
 
@@ -33,7 +33,7 @@
     <tr >
       <td class="td-left" style="cursor: pointer;">
        意外身故/伤残
-        <img src="wx_share/img/help.jpg"  class="help-img"><br/>
+        <img src="img/temai/wen.png"  class="help-img"><br/>
         <span class="gray">含高风险运动</span>
         </td>
       <td>50万元</td>
@@ -45,15 +45,63 @@
 	<div class="tail-header">
 		<div class="hd">产品说明</div>
 		<div class="hd">投保须知</div>
-		<div class="hd">常见问题</div>
+		<div class="hd select">常见问题</div>
 	</div>
-	<ul class="qa-container">
-		<li class="qa-item">
-			<div class="qa-icon"></div>	
-			<div class="qa-content"></div>	
+	<div class="qa-container" style="display: none;">
+		<ul >
+		<li class="qa-item  question">
+			<div class="qa-icon "></div>	
+			<div class="qa-content"><div>是否可以续保啊？</div>	</div>	
 		</li>
+		<li class="qa-item answer">
+			<div class="qa-icon" ></div>	
+			<div class="qa-content">
+				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
+			</div>
+		</li>
+		<li class="qa-item answer">
+			<div class="qa-icon" ></div>	
+			<div class="qa-content">
+				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
+			</div>
+		</li>
+		<li class="qa-item answer">
+			<div class="qa-icon" ></div>	
+			<div class="qa-content">
+				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
+			</div>
+		</li>
+		</ul>
+		<div class="more-container">
+			<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
+				<img src="img/jiantou.png" />
+			</a>
+		</div>
+	</div>
 
-	</ul>
+	<div class="showknow-container">
+		<div class="know-content">
+		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
+		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
+		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
+		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
+		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
+		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
+
+		</div>
+		<div class="more-1-container">
+			查看更多  <img src="img/jiantou.png" />
+		</div>
+
+		<div class="button-container">
+			<div class="left"><a href="javascript:;" class="weui_btn weui_btn_plain_more">产品条款</a></div>
+			<div class="right"><a href="javascript:;" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
+		</div>
+
+	</div>
+
+
+	
 </div>
 
 <div class="cell pay_container ">
