--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -221,13 +221,16 @@
  * @class variables
  * @module Yo
  */
+* {
+  box-sizing: border-box; }
+
 body {
   background-color: #f5f5f5; }
 
 header {
   background-color: #fff; }
   header .top-container {
-    height: 110px;
+    height: 1.35rem;
     background: url("../img/temai/header_detail.jpg") no-repeat center center;
     background-size: cover;
     color: #fff;
@@ -284,7 +287,10 @@ header {
   .detail-content .content-table tr {
     color: #555; }
   .detail-content .content-table .td-left {
-    text-align: left; }
+    text-align: left;
+    font-size: 15px; }
+  .detail-content .td-left > span {
+    font-size: 14px; }
   .detail-content .help-img {
     height: 0.18rem;
     vertical-align: -0.02rem; }
@@ -301,8 +307,8 @@ header {
   text-align: center;
   text-decoration: none;
   color: #FFFFFF;
-  line-height: 2.33333333;
-  border-radius: 5px;
+  line-height: 2.4;
+  border-radius: 3px;
   -webkit-tap-highlight-color: transparent;
   overflow: hidden; }
 
@@ -315,17 +321,25 @@ header {
   color: #555;
   border: 1px solid #ccc; }
 
+.weui_btn_plain_more {
+  color: #588dd4;
+  border: 1px solid #ccc; }
+
 .weui_btn_primary {
   background-color: #588dd4;
   color: #fff; }
 
 .tail-container {
   margin-top: 10px;
-  border-bottom: 1px solid  #e2e2e2; }
+  border-bottom: 1px solid  #e2e2e2;
+  background-color: #fff;
+  padding-bottom: 20px;
+  margin-bottom: 65px; }
 
 .tail-header {
   background-color: #FFF;
   border-bottom: 1px solid  #e2e2e2;
+  font-size: 15px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -341,23 +355,114 @@ header {
     text-align: center;
     height: 45px;
     line-height: 45px; }
+  .tail-header .hd.select {
+    color: #588dd4;
+    border-bottom: 3px solid #588dd4; }
 
 .qa-container {
   background-color: #FFF; }
 
-.item {
+.qa-item {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  display: flex; }
-  .item .qa-icon, .item .qa-content {
+  display: flex;
+  margin: 15px 0; }
+  .qa-item .qa-icon {
+    width: 40px;
+    text-align: center; }
+  .qa-item .qa-content {
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -moz-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
     width: .1px; }
+    .qa-item .qa-content div {
+      background-color: #f5f5f5;
+      margin: 0 10px;
+      padding: 10px;
+      border-radius: 5px;
+      font-size: 14px;
+      display: inline-block;
+      *display: inline;
+      *zoom: 1;
+      position: relative; }
+    .qa-item .qa-content div:before {
+      content: "";
+      display: block;
+      position: absolute;
+      left: -7px;
+      top: 3px;
+      width: 0;
+      height: 0;
+      border-width: 8px 8px 8px 0;
+      border-style: solid;
+      border-color: transparent;
+      border-right-color: #f5f5f5; }
+
+.question .qa-icon {
+  background: url(../img/temai/question.jpg) no-repeat center;
+  background-size: 22px; }
+
+.answer .qa-icon {
+  background: url(../img/temai/answer.jpg) no-repeat center;
+  background-size: 22px; }
+
+.question {
+  color: #555; }
+
+.answer {
+  color: #999; }
+
+.more-container {
+  width: 100px;
+  margin: 0 auto; }
+
+.more-container img {
+  width: 5px;
+  transform: rotate(90deg);
+  vertical-align: 0px; }
+
+.more-1-container {
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 8px;
+  text-align: center; }
+  .more-1-container img {
+    width: 5px;
+    transform: rotate(90deg);
+    vertical-align: 0px; }
+
+.button-container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px; }
+  .button-container .left, .button-container .right {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -moz-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    width: .1px; }
+    .button-container .left a, .button-container .right a {
+      width: 83px; }
+
+.showknow-container {
+  background-color: #FFF;
+  padding: 0 10px 15px;
+  color: #555; }
+  .showknow-container h4 {
+    font-size: 13px;
+    margin: 0;
+    margin-top: 18px; }
+  .showknow-container p {
+    font-size: 12px;
+    margin: 0; }
 
 .pay_container {
   overflow: hidden;
