--- a/app/sass/temai_detail.scss
+++ b/app/sass/temai_detail.scss
@@ -1,6 +1,9 @@
 @import "base/classes.scss";
 @import "base/variables.scss";
 
+* {
+	box-sizing: border-box;
+}
 body {
 	background-color: #f5f5f5;
 }
@@ -8,7 +11,7 @@ header {
 	background-color: #fff;
 
 	.top-container {
-		height: 110px;
+		height: 1.35rem;
 		background: url("../img/temai/header_detail.jpg") no-repeat center center;
 		background-size: cover;
 		color: #fff;
@@ -48,44 +51,46 @@ header {
 		bottom: 10px;
 	}
 }
-.gray{
-	color:#999;
+.gray {
+	color: #999;
 }
 .detail-content {
 	background-color: #FFF;
 	margin-top: 10px;
 	padding: 0 10px 10px;
-	border-bottom:1px solid #e2e2e2;
+	border-bottom: 1px solid #e2e2e2;
+
 	.btn-container {
 		padding: 10px 0;
 		overflow: hidden;
 	}
-
-	
 	.content-table {
 		width: 100%;
 		border-collapse: collapse;
-		font-size:14px;	
+		font-size: 14px;
 	}
 	.content-table td, .content-table th {
 		border: 1px solid #e2e2e2;
 		padding: 0.07rem;
 		text-align: center;
-
 	}
 	.content-table th {
 		font-weight: normal;
 		color: #999;
 	}
-	.content-table tr{
+	.content-table tr {
 		color: #555;
 	}
 	.content-table .td-left {
 		text-align: left;
+		font-size: 15px;
+	}
+	.td-left > span {
+		font-size: 14px;
 	}
 	.help-img {
-	  height: 0.18rem;
-	  vertical-align: -0.02rem;
+		height: 0.18rem;
+		vertical-align: -0.02rem;
 	}
 }
 .weui_btn {
@@ -100,8 +105,8 @@ header {
 	text-align: center;
 	text-decoration: none;
 	color: #FFFFFF;
-	line-height: 2.33333333;
-	border-radius: 5px;
+	line-height: 2.4;
+	border-radius: 3px;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	overflow: hidden;
 }
@@ -114,52 +119,163 @@ header {
 	color: #555;
 	border: 1px solid #ccc;
 }
+.weui_btn_plain_more {
+	color: #588dd4;
+	border: 1px solid #ccc;
+}
 .weui_btn_primary {
 	background-color: #588dd4;
 	color: #fff;
 }
-.tail-container{
-	margin-top:10px;
-	border-bottom:1px solid  #e2e2e2;
+.tail-container {
+	margin-top: 10px;
+	border-bottom: 1px solid  #e2e2e2;
+	background-color: #fff;
+	padding-bottom: 20px;
+	margin-bottom: 65px;
 }
-.tail-header{
+.tail-header {
 	background-color: #FFF;
-	border-bottom:1px solid  #e2e2e2;
+	border-bottom: 1px solid  #e2e2e2;
+	font-size: 15px;
 	@include flexbox;
-	.hd{
+
+	.hd {
 		@include flex(1);
 		text-align: center;
-		height:45px;
+		height: 45px;
 		line-height: 45px;
 	}
+	.hd.select {
+		color: #588dd4;
+		border-bottom: 3px solid #588dd4;
+	}
 }
-.qa-container{
+.qa-container {
 	background-color: #FFF;
 }
-.item{
+.qa-item {
 	@include flexbox;
-	.qa-icon{
-		@include flex( 0 1 150px;);
+	margin: 15px 0;
+
+	.qa-icon {
+		width: 40px;
 		text-align: center;
 	}
-	.qa-content{
+	.qa-content {
 		@include flex(1);
+
+		div {
+			background-color: #f5f5f5;
+			margin: 0 10px;
+			padding: 10px;
+			border-radius: 5px;
+			font-size: 14px;
+			display: inline-block;
+			*display: inline;
+			*zoom: 1;
+			position: relative
+		}
+		div:before {
+			content: "";
+			display: block;
+			position: absolute;
+			left: -7px;
+			top: 3px;
+			width: 0;
+			height: 0;
+			border-width: 8px 8px 8px 0;
+			border-style: solid;
+			border-color: transparent;
+			border-right-color: #f5f5f5;
+		}
 	}
 }
-.pay_container{
-  overflow: hidden;position: fixed;bottom:0;width:100%;
-  border-top: 1px solid #e2e2e2;box-sizing: border-box;height: 48px;
+.question .qa-icon {
+	background: url(../img/temai/question.jpg) no-repeat  center;
+	background-size: 22px;
 }
-.pay_container .left{
-  margin-right:1.5rem;width:65%;border-radius: 0;  background-color: #fff;color:#555;
+.answer .qa-icon {
+	background: url(../img/temai/answer.jpg) no-repeat  center;
+	background-size: 22px;
 }
-.pay_container .right{
-  background-color: #ff5c00;
-  float:right;
-  width: 35%;
-  border-radius: 0
+.question {
+	color: #555;
+}
+.answer {
+	color: #999;
+}
+.more-container {
+	width: 100px;
+	margin: 0 auto;
+}
+.more-container img {
+	width: 5px;
+	transform: rotate(90deg);
+	vertical-align: 0px;
+}
+.more-1-container {
+	width: 100px;
+	margin: 0 auto;
+	margin-top:8px;
+	text-align:center;
+	img {
+		width: 5px;
+		transform: rotate(90deg);
+		vertical-align: 0px;
+	}
+}
+.button-container{
+	@include flexbox;
+	margin-top:15px;
+	.left, .right{
+		@include flex(1);
+		a{
+			width:83px;
+		}
+	}
+}
+
+.showknow-container{
+	background-color: #FFF;
+	padding:0 10px 15px;
+	color:#555;
+	h4{
+		font-size:13px;
+		margin:0;
+		margin-top: 18px;
+	}
+	p{
+		font-size:12px;	
+		margin:0;
+	}
+}
+
+
+
+.pay_container {
+	overflow: hidden;
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	border-top: 1px solid #e2e2e2;
+	box-sizing: border-box;
+	height: 48px;
+}
+.pay_container .left {
+	margin-right: 1.5rem;
+	width: 65%;
+	border-radius: 0;
+	background-color: #fff;
+	color: #555;
+}
+.pay_container .right {
+	background-color: #ff5c00;
+	float: right;
+	width: 35%;
+	border-radius: 0
 }
 .money_size {
-  font-size: .27rem;
-  color: #ff5c00;
+	font-size: .27rem;
+	color: #ff5c00;
 }
