--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=edsfdsfdsfdsfs">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=0236cac29ff8b37d9bf684adedbf8f06">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<div class="ul_contrl" ng-if="coupon_id==1">
@@ -9,7 +9,7 @@
 			<p class="chanpin_name">中国平安-500万航空意外险</p>
 			<p class="pei_300">乘坐飞机人身意外身故/伤残保障<span>500</span>万</p>
 		</div>
-		<div class="ul_contrl" >
+		<div class="ul_contrl" ng-if="coupon_id==3">
 			<div class="ul_contrl_top">
 				<div class="chanpin_name" >中国平安-航班延误险</div>
 				<div class="pei_300 up_20">航班延误3小时以上，即赔付<span>300</span>元</div>
