--- a/app/partials/temai_detail.html
+++ b/app/partials/temai_detail.html
@@ -1,110 +1,135 @@
-<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=4304aa5ea8c435fbc34a9708c52b98ac">
+<link rel="stylesheet" type="text/css" href="css/temai_detail.css?rev=3c535a4a34838098777319d6db20369c">
 
-
-
-<header>
-	<div class="top-container">
-		<div class="company">中国平安承保</div>
-		<div class="text-container">	
-			<div class="title">中国平安7天意外险</div>
-			<div class="sub-title"><img src="img/temai/dun.png">&nbsp;7天保额<span class="red">50万</span>起</div>
+<div  cg-busy="myPromise" >
+	<header>
+		<div class="top-container" >
+			<img ng-src="{{data.large_image}}" style="width:100%;">
+			<div class="company">
+				{{data.insurance_company_name
+}}承保
+			</div>
+			<div class="text-container">
+				<div class="title">{{data.insurance_name}}</div>
+				<div class="sub-title" style="display:none">
+					<img src="img/temai/dun.png">&nbsp;</div>
+			</div>
 		</div>
+		<div class="bottom-container">{{data.insurance_description}}</div>
+	</header>
+
+	<div class="detail-content"  data-ng-init="init()"   >
+		<div class="btn-container" ng-show="data.insurance_plans.length>
+			1"   data-current-select-id="{{data.insurance_plans[0].id}}">
+			<div class="fl-3" ng-repeat="plan in data.insurance_plans" data-id="{{plan.id}}">
+				<a href="javascript:;" class="weui_btn weui_btn_plain_default"   ng-class="{'weui_btn_primary':$index==0}"  data-index="{{$index}}"  ng-click="headSelect($event, plan)"   >{{plan.name}}</a>
+			</div>
+
+		</div>
+
+		<table class="content-table" id="content_{{$index}}" ng-repeat="plan in data.insurance_plans" ng-show="selectTable==$index">
+			<tr>
+				<th width="70%">保障范围</th>
+				<th>保额</th>
+			</tr>
+
+			<tr ng-repeat="item in plan.coverage_beans">
+				<td class="td-left" style="cursor: pointer;">
+					{{item.name}}
+					<img src="img/temai/wen.png"  class="help-img" title="{{item.description}}"/>
+					<br/>
+					<span class="gray">含高风险运动</span>
+				</td>
+				<td>{{item.sum_insured/100 | number}}元{{item.danwei}}</td>
+			</tr>
+		</table>
 	</div>
-	<div class="bottom-container">
-		范围：交通意外，意外身故，意外死亡，意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉意外挂掉	
+
+	<div class="tail-container"></div>
+
+	<div class="cell pay_container ">
+		<a href="javascript:void(0)" class="btn btn_n_primary right"   ng-click="showMask()" >立即投保</a>
+		<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr" >
+			<span class="money_size">{{money/100 | number}}</span>
+			元
+			<span ng-show="plan.premium_type==2">起</span>
+		</a>
+	</div>
+</div>
+<div class="mask " id="detail_mask_container"  style="display: none;z-index:100000">
+	<div class="head-container">
+		<span class="close"></span>
+		<div class="fl">
+			<img ng-src="{{data.small_image}}" ></div>
+		<div class="fl">
+			<p >
+				<span  style="font-size:18px;color:#ff5c00;">{{money/100 | number}}</span>
+				元
+			</p>
+			<p>*最终购买价格</p>
+			<p>以被保险人身份信息测算为准</p>
+		</div>
+		<div class="line" style="clear:both;"></div>
+
+		<div class="select-container">
+			<h4>保障方案</h4>
+			<a href="javascript:void(0)" class="button button_primary" ng-click="changeTaoCan($event,item)" ng-class="item.id==plan.id?'button_hover':''" ng-repeat="item in data.insurance_plans">{{item.name}}</a>
+			<!--
+      <a href="javascript:void(0)" class="button button_primary button_hover">经济型</a>
+		<a href="javascript:void(0)" class="button button_primary">实惠制</a>
+		-->
+	</div>
+
+	<div class="select-container">
+		<h4>保障期间</h4>
+		<a href="javascript:void(0)" class="button button_primary"   ng-click="changeDuration($event,item)"  ng-class="item==coverage_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.coverage_periods">{{item}}{{genDanwei(maskSelectPlan.coverage_period_type)}}</a>
+	</div>
+
+	<div class="select-container">
+		<h4>缴费期间</h4>
+
+		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,nul)"   ng-class="charge_period==null?'button_hover':''">一次交清</a>
+
+		<a href="javascript:void(0)" class="button button_primary"  ng-click="changeFee($event,item)"   ng-class="item==charge_period?'button_hover':''"  ng-repeat="item in maskSelectPlan.charge_periods">{{item}}</a>
 
 	</div>
-</header>
 
-<div class="detail-content">
-	<div class="btn-container">
-		<div class="fl-3"><a href="javascript:;" class="weui_btn weui_btn_primary ">经典版</a></div>
-			<div class="fl-3"><a href="javascript:;" class="weui_btn weui_btn_plain_default">尊贵版</a></div>
-
+	<div class="fix_container">
+		<a href="javascript:void(0)"  style="height:45px;line-height: 45px;"  ng-click="submit()"  class="btn btn_n_primary">确定</a>
 	</div>
 
-
-	 <table class="content-table">
-    <tr>
-      <th width="70%">保障范围</th>
-      <th>保额</th>
-    </tr>
-
-    <tr >
-      <td class="td-left" style="cursor: pointer;">
-       意外身故/伤残
-        <img src="img/temai/wen.png"  class="help-img"><br/>
-        <span class="gray">含高风险运动</span>
-        </td>
-      <td>50万元</td>
-    </tr>
-  </table>
 </div>
 
-<div class="tail-container">
-	<div class="tail-header">
-		<div class="hd">产品说明</div>
-		<div class="hd">投保须知</div>
-		<div class="hd select">常见问题</div>
-	</div>
-	<div class="qa-container" style="display: none;">
-		<ul >
-		<li class="qa-item  question">
-			<div class="qa-icon "></div>	
-			<div class="qa-content"><div>是否可以续保啊？</div>	</div>	
-		</li>
-		<li class="qa-item answer">
-			<div class="qa-icon" ></div>	
-			<div class="qa-content">
-				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
-			</div>
-		</li>
-		<li class="qa-item answer">
-			<div class="qa-icon" ></div>	
-			<div class="qa-content">
-				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
-			</div>
-		</li>
-		<li class="qa-item answer">
-			<div class="qa-icon" ></div>	
-			<div class="qa-content">
-				<div>您好，在符合本产品的投保年龄范围及其他投保要求的情况下是可以续保的，但是续保时保险公司可能会根据上一年的理赔情况重新审核定价。</div>	
-			</div>
-		</li>
-		</ul>
-		<div class="more-container">
-			<a href="javascript:;" class="weui_btn weui_btn_plain_more">查看更多
-				<img src="img/jiantou.png" />
-			</a>
-		</div>
-	</div>
-
-	<div class="showknow-container">
-		<div class="know-content">
-		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
-		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
-		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
-		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
-		<h4>1、本产品由美亚财产保险有限公司承保 </h4>
-		<p>目前该公司在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售在上海市、北京市、广东省（含深圳市）、江苏省、浙江省设有分支机构。本产品的销售</p>
-
-		</div>
-		<div class="more-1-container">
-			查看更多  <img src="img/jiantou.png" />
-		</div>
-
-		<div class="button-container">
-			<div class="left"><a href="javascript:;" class="weui_btn weui_btn_plain_more">产品条款</a></div>
-			<div class="right"><a href="javascript:;" class="weui_btn weui_btn_plain_more">理赔资料</a></div>
-		</div>
-
-	</div>
-
-
-	
 </div>
 
-<div class="cell pay_container ">
-	<a href="javascript:void(0)" class="btn btn_n_primary right"  >立即投保</a>
-	<a href="javascript:void(0)" class="btn btn_n_primary left tg_dz_fr" > 经典版 <span class="money_size">258</span> 元</a>
+<div class="mask " id="popup">
+<div class="toast"></div>
 </div>
+<script>
+
+$(function(){
+ $("body").on("click",".td-left",function(){
+    $("#popup").find(".toast").html($(this).find("img").attr("title"));
+    $("#popup").show()
+ });
+
+ $("body").on("click",".more-1-container",function(){
+ 	 $(".know-content").show();
+ 	 $(".know-content").css({
+ 	 	"height":"auto",
+ 	 	"overflow":"auto"
+ 	 });
+     $(this).hide();
+ });
+
+  $(".tail-container").on("click",".hd",function(){
+  	$(".tail-header").find(".hd").removeClass("select");
+  	$(this).addClass("select");
+  	var index = $(this).index()
+  	$("#template-container").children().hide();
+  	$("#template-container").children(":eq("+index+")").show();
+ });
+ $(".mask").click(function(){
+    $(this).hide(); 
+ });
+})
+</script>
