--- a/app/css/globe.css
+++ b/app/css/globe.css
@@ -487,3 +487,38 @@ overflow: hidden;
     background-size: 100% auto;
 }
 */
+
+.weui_btn {
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 14px;
+  padding-right: 14px;
+  box-sizing: border-box;
+  font-size: 13px;
+  text-align: center;
+  text-decoration: none;
+  color: #FFFFFF;
+  line-height: 2.4;
+  border-radius: 3px;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  overflow: hidden;
+}
+
+.weui_btn_plain_default {
+  color: #555;
+  border: 1px solid #ccc;
+}
+.weui_btn_plain_more {
+  color: #588dd4;
+  border: 1px solid #ccc;
+}
+.weui_btn_primary {
+  background-color: #588dd4;
+  color: #fff;
+}
+.weui_btn_plain_focus {
+  border:1px solid #588dd4;
+  color: #fff;
+}
