--- a/app/css/temai_detail.css
+++ b/app/css/temai_detail.css
@@ -293,39 +293,10 @@ header {
     height: 0.18rem;
     vertical-align: -0.02rem; }
 
-.weui_btn {
-  position: relative;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 14px;
-  padding-right: 14px;
-  box-sizing: border-box;
-  font-size: 13px;
-  text-align: center;
-  text-decoration: none;
-  color: #FFFFFF;
-  line-height: 2.4;
-  border-radius: 3px;
-  -webkit-tap-highlight-color: transparent;
-  overflow: hidden; }
-
 .fl-3 {
   float: left;
   width: 70px;
   margin-right: 10px; }
-
-.weui_btn_plain_default {
-  color: #555;
-  border: 1px solid #ccc; }
-
-.weui_btn_plain_more {
-  color: #588dd4;
-  border: 1px solid #ccc; }
-
-.weui_btn_primary {
-  background-color: #588dd4;
-  color: #fff; }
 
 .tail-container {
   margin-top: 10px;
@@ -358,7 +329,12 @@ header {
     -moz-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    width: .1px;
+    /*
+    @if $direction == column {
+        height: .1px;
+    } @else {
+        width: .1px;
+    }*/
     text-align: center;
     height: 45px;
     line-height: 45px;
@@ -386,7 +362,12 @@ header {
     -moz-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    width: .1px; }
+    /*
+    @if $direction == column {
+        height: .1px;
+    } @else {
+        width: .1px;
+    }*/ }
     .qa-item .qa-content div {
       background-color: #f5f5f5;
       margin: 0 10px;
@@ -456,7 +437,12 @@ header {
     -moz-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
-    width: .1px; }
+    /*
+    @if $direction == column {
+        height: .1px;
+    } @else {
+        width: .1px;
+    }*/ }
     .button-container .left a, .button-container .right a {
       width: 83px; }
 
