--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -2,9 +2,9 @@
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;padding:0 17px;">
 
-	<div  class="head-container" style="overflow: hidden;">
+	<div  class="head-container" style="overflow: hidden;" >
 		<label class="switch">
-		<input class="switch-input" type="checkbox" />
+		<input class="switch-input" type="checkbox" ng-click="test();" />
 		<span class="switch-label" data-on="个性定制" data-off="直接购买"></span> 
 		<span class="switch-handle"></span> 
 	</label>
