--- a/app/css/ring.css
+++ b/app/css/ring.css
@@ -5,16 +5,47 @@
 .tx_ce {
 	text-align: center;
 }
+
 .head-container{
-	width:200px;
-	margin:.2rem auto;
+    width:200px;
+    margin:15px auto 25px;
 }
+.head-container .cell_hd {
+  width: 200px;
+  height:auto;
+}
+
+
+.head-container .btn {
+  height: 34px;
+  line-height: 34px;
+  font-size: 12px;
+}
+
+
+.head-container .btn_n_primary{
+	background-color: #1e4e8e;
+	border-radius: 20px;
+}
+.head-container .btn_unchoose {
+  background-color: #cacaca;
+  color: #555;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  position: relative;
+  top:0;
+  left:-12px;
+  z-index:-1;
+}
+
+
+
 .bt_container {
 	position: relative;
 	border-width: 1px;
 	border-style: none none solid none;
 	border-color: #e0e0e0;
-	padding: 0.1rem 0px;
+	padding: 0px 0px 13px; 
 	font-size: 0.16rem;
 	overflow: hidden;
 }
@@ -45,10 +76,11 @@
 	color:#555555;
 	width:90px;
 	text-align: center;
+	line-height: 0;
 
 }
 .score_container  .score{
-	font-size:0.5rem;
+	font-size:.28rem;
 	color:#555;
 }
 .score_container  .danwei{
@@ -68,7 +100,7 @@
 	margin:0.05rem;
 }
 .weui_progress_bar {
-	background-color: #e0e0e0;
+	background-color: #eee;
 	height: 15px;
 	position: relative;
 	border-radius: 15px;
@@ -122,11 +154,11 @@
 	top: 0.12rem;
 }
 .bottom_container {
-	border-width: 1px;
-	border-style: none none solid;
+	/*border-width: 1px;*/
+	/*border-style: none none solid;*/
 	border-color: #cacaca;
-	padding: 0.4rem 0.2rem;
-	margin-top: 90px;
+	padding: 40px 15px 45px;
+	margin-top: 58px;
 	position: relative;
 	text-align: center;
 }
@@ -258,126 +290,3 @@
 
 
 
-
-
-.switch {
-	position: relative;
-	display: block;
-	vertical-align: top;
-	width: 170px;
-	height: 33px;
-	padding: 3px;
-	margin: 0 auto;
-	outline: none;	/*background: linear-gradient(to bottom, #eeeeee, #FFFFFF 25px);*/
-
-	/*background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF 25px);*/
-	border-radius: 31px;	/*box-shadow: inset 0 -1px white, inset 0 1px 1px rgba(0, 0, 0, 0.05);*/
-	cursor: pointer;
-	border: none;	/*border:1px solid #e2e2e2;*/
-}
-.switch-input {
-	position: absolute;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-.switch-label {
-	position: relative;
-	display: block;
-	height: inherit;
-	font-size: 14px;
-	text-transform: uppercase;
-	background: #f0f0f0;
-	border-radius: inherit;
-	border:1px solid #e2e2e2;
-	/*box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.12), inset 0 0 1px rgba(0, 0, 0, 0.15);*/
-	font-family: Arial, Microsoft YaHei, SimHei, Helvetica, sans-serif;
-}
-.switch-label:before, .switch-label:after {
-	position: absolute;
-	top: 50%;
-	margin-top: -.5em;
-	line-height: 1;
-	-webkit-transition: inherit;
-	-moz-transition: inherit;
-	-o-transition: inherit;
-	transition: inherit;
-}
-.switch-label:before {
-	content: attr(data-off);
-	right: 15px;
-	color: #555555;
-	/*text-shadow: 0 1px rgba(255, 255, 255, 0.5);*/
-}
-.switch-label:after {
-	content: attr(data-on);
-	left: 12px;
-	color: #555555;
-	/*text-shadow: 0 1px rgba(0, 0, 0, 0.2);*/
-	opacity: 0;
-}
-.switch-input:checked ~ .switch-label {
-	background: #f0f0f0;
-	/*box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.15), inset 0 0 3px rgba(0, 0, 0, 0.2);*/
-}
-.switch-input:checked ~ .switch-label:before {
-	opacity: 0;
-}
-.switch-input:checked ~ .switch-label:after {
-	opacity: 1;
-}
-.switch-handle {
-	position: absolute;
-	top: 4px;
-	left: 3px;
-	width: 91px;
-	height: 33px;
-	background-color: #1e4e8e;	/*background: linear-gradient(to bottom, #FFFFFF 40%, #f0f0f0);*/
-
-	/*background-image: -webkit-linear-gradient(top, #FFFFFF 40%, #f0f0f0);*/
-	border-radius: 44px;
-	/*box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);*/
-}
-.switch-handle:before {
-	content: "个性定制";
-	position: absolute;
-	color: #fff;
-	font-size: 14px;
-	top: 50%;
-	left: 50%;
-	margin: -12px 0 0 -32px;
-	width: 80px;
-	/*height: 12px;*/
-	font-family: Arial, Microsoft YaHei, SimHei, Helvetica, sans-serif;	/*background: linear-gradient(to bottom, #eeeeee, #FFFFFF);*/
-
-	/*background-image: -webkit-linear-gradient(top, #eeeeee, #FFFFFF);*/
-
-	/*border-radius: 6px;*/
-
-	/*box-shadow: inset 0 1px rgba(0, 0, 0, 0.02);*/
-}
-.switch-input:checked ~ .switch-handle:before {
-	content: "直接购买";
-}
-
-
-.switch-input:checked ~ .switch-handle {
-
-	/*left: 74px;*/
-	-webkit-transform: translateX(80px);
-	-moz-transform: translateX(80px);
-	-ms-transform: translateX(80px);
-	-o-transform: translateX(80px);
-	transform: translateX(80px);
-	/*box-shadow: -1px 1px 5px rgba(0, 0, 0, 0.2);*/
-}
-
-/* Transition
-========================== */
-.switch-label, .switch-handle {
-	transition: All 0.3s ease;
-	-webkit-transition: All 0.3s ease;
-	-moz-transition: All 0.3s ease;
-	-o-transition: All 0.3s ease;
-}
