--- a/app/partials/jingzhun.html
+++ b/app/partials/jingzhun.html
@@ -1,11 +1,11 @@
 
-<link rel="stylesheet" href="css/product_list.css?rev=e0d6f380ca1ad544c2a22abc0c007e49"> 
-<div style="" class="head-container" >
+<link rel="stylesheet" href="css/product_list.css?rev=621ef7f658c2e21738a9e58e59f1373a"> 
+<div  class="head-container"  ng-click="goLairen()">
   <div class="cell_hd">
-    <a href="javascript:void(0)"  class="btn  btn_unchoose"  ng-click="goLairen()">个性定制</a>
+    <a href="javascript:void(0)"  class="btn  btn_unchoose" >个性定制</a>
   </div>
   <div class="cell_hd">
-    <a href="javascript:void(0)"  style="border-radius: 0;" class="btn btn_n_primary" >直接购买</a>
+    <a href="javascript:void(0)"   class="btn btn_n_primary" >直接购买</a>
   </div>
 </div>
 <ul class="ul_container"  data-ng-init="init()" cg-busy="listPromise" >
