--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,13 +1,24 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=a2e363946d7a46c73bae48007e41daca">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=7f041329491c3a34894dfaf187e13707">
 
-<div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;padding:0 17px;">
+<div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;padding:0 10px;">
 
+	<!--
 	<div  class="head-container" style="overflow: hidden;" >
 		<label class="switch">
-		<input class="switch-input" type="checkbox" ng-click="test();" />
+		<input class="switch-input" type="checkbox" checked ng-click="test();" />
 		<span class="switch-label" data-on="个性定制" data-off="直接购买"></span> 
 		<span class="switch-handle"></span> 
 	</label>
+	</div>
+	-->
+
+	<div class="head-container"  ng-click="goJingzhun()">
+		<div class="cell_hd">
+			<a href="javascript:void(0)"   class="btn btn_n_primary " >个性定制</a>
+		</div>
+		<div class="cell_hd">
+			<a href="javascript:void(0)" class="btn btn_unchoose" >直接购买</a>
+		</div>
 	</div>
 
 	
@@ -17,7 +28,7 @@
 		选择保障范围
 	</div>
 	<div style="position: relative;" id="clockContainer">
-		<div class="score_container" >
+		<div class="score_container" style="bottom:40px;" >
 			<span id="fanwei_score"  class="score">{{fanweiScore}}</span><span class="danwei">分</span>
 			</div>
 		<canvas id="bgchartContainer" ></canvas>
@@ -50,7 +61,7 @@
 </div>
 
 <div  class="bottom_container" id="customerSlider" >
-	<div class="score_container" style="top:-80px; ">
+	<div class="score_container" style="top:-25px; ">
 			<span id="money_score" class="score">0</span>
 			<span class="danwei">分</span>
 	</div>
