--- a/app/partials/select_part.html
+++ b/app/partials/select_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/ring.css?rev=7f041329491c3a34894dfaf187e13707">
+<link rel="stylesheet" type="text/css" href="css/ring.css?rev=48e9c960b8f855d66bfe83d61c055b51">
 
 <div  class="wrapper"  data-ng-init="init()" style="overflow: hidden;padding:0 10px;">
 
@@ -35,16 +35,16 @@
 		<canvas id="chartContainer"  style="background:transparent;position:absolute;left:0;top:0;" ></canvas>
 		<div  id = "chartTextContainer" class="canvas_text"   style = "position:absolute;">
 			<!---->
-			<p  style="position:absolute;left:0.5rem;margin:0;top:0.4rem;font-size:0.20rem;text-align: center;color:#588dd4;line-height: 24px;" id="default_text">
+			<p  style="position:absolute;left:27%;margin:0;top:40%;font-size:0.20rem;text-align: center;color:#588dd4;line-height: 24px;" id="default_text">
 			顺时针滑动<br/>
 			<span style="color:#999;">选择范围</span>
 			</p>
 
-			<div  style="position:relative;left:-0.5rem;opacity:0"  class="small">&nbsp;&nbsp;</div>
-			<div  style="position:relative;left:0.4rem;font-size:0.16rem;opacity: 0">&nbsp;&nbsp;</div>
-			<div  style="position:relative;font-size:0.26rem;text-align: center;opacity: 1">&nbsp;&nbsp;</div>
-			<div  style="position:relative;left:0.3rem;opacity: 0;font-size:0.13rem" >&nbsp;&nbsp;</div>
-			<div  style="position:relative;left:-0.2rem;font-size:0.17rem;opacity: 0;" class="small" >&nbsp;&nbsp;</div>
+			<div  style="position:relative;left:-0.5rem;opacity:0;color:#bbb;"  class="small">&nbsp;&nbsp;</div>
+			<div  style="position:relative;left:0.4rem;font-size:0.16rem;opacity: 0;color:#999;">&nbsp;&nbsp;</div>
+			<div  style="position:relative;font-size:0.26rem;text-align: center;opacity: 1;color:#777;">&nbsp;&nbsp;</div>
+			<div  style="position:relative;left:0.3rem;opacity: 0;font-size:0.13rem;color:#999;" >&nbsp;&nbsp;</div>
+			<div  style="position:relative;left:-0.2rem;font-size:0.17rem;opacity: 0;color:#bbb;" class="small" >&nbsp;&nbsp;</div>
 		</div>
 		<div id="log"></div>
 	</div>
@@ -73,7 +73,7 @@
 		</div>
 		<div  class="kedu" style="left:2%;">
 			<div class="zz"></div>
-			<p>0万</p>
+			<p>0</p>
 		</div>
 		<div  class="kedu" style="left:6.5%;">
 			<div class="small-zz"></div>
@@ -87,21 +87,21 @@
 	
 		<div  class="kedu" style="left:20%;">
 			<div class="zz"></div>
-			<p>20万</p>
+			<p>20</p>
 		</div>
 		<div  class="kedu" style="left:25%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:30%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:35%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:40%;">
 			<div class="zz"></div>
-			<p>50万</p>
+			<p>50</p>
 		</div>
 		<div  class="kedu" style="left:45%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:50%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:55%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:60%;">
 			<div class="zz"></div>
-			<p>100万</p>
+			<p>100</p>
 			<div class="bottom-word">基本</div>
 		</div>
 		<div  class="kedu" style="left:65%"> <div class="small-zz"></div> </div> 
@@ -109,16 +109,16 @@
 		<div  class="kedu" style="left:75%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:80%;">
 			<div class="zz"></div>
-			<p>200万</p>
+			<p>200</p>
 			<div class="bottom-word">推荐</div>
 		</div>
 		<div  class="kedu" style="left:84.5%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:89%"> <div class="small-zz"></div> </div> 
 		<div  class="kedu" style="left:93.5%"> <div class="small-zz"></div> </div> 
 
-		<div  class="kedu" style="left:98%;">
+		<div  class="kedu" style="left:97.3%;">
 			<div class="zz"></div>	
-			<p >500万</p>
+			<p >500(万)</p>
 			<div class="bottom-word">无忧</div>
 		</div>
 
