极限运动活动页

--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=0236cac29ff8b37d9bf684adedbf8f06">
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=dc9ddffd6d892716f8a6c391fa329d9e">
 <div id="wrapper" class="wrapper">
 	<div class="bd_part_controller">
 		<div class="ul_contrl" ng-if="coupon_id==1">
@@ -18,7 +18,10 @@
 				<div class="xian"></div>
 			    <div class="pei_300 up_30">暂不支持春秋航空、国际航空</div>
 			</div>
-			
+		</div>
+		<div class="ul_contrl" ng-if="coupon_id==4">
+			<p class="chanpin_name">史带财险-10万极限运动险</p>
+			<p class="pei_300">极限运动导致意外身故或伤残赔付保险金<span>10</span>万</p>
 		</div>
 		<div class="bd_part_main paddLeft">
 			<form class="" role="form" name="registration" novalidate>
