--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -24,8 +24,8 @@
 				<img src="wx_share/img/my_bd/wan500.png">
 			</div>
 			<div class="img_logo layout">
-				<a href="###" ng-click="addCoupon()"><img class="logo_money" src="wx_share/img/my_bd/money.png"> 免费领取</a>
-				<a href="###" ng-click="showShareTip()"><img class="logo_song" src="wx_share/img/my_bd/song.png"> 送给好友</a>
+				<a href="javascript:" ng-click="addCoupon()"><img class="logo_money" src="wx_share/img/my_bd/money.png"> 免费领取</a>
+				<a href="javascript:" ng-click="showShareTip()"><img class="logo_song" src="wx_share/img/my_bd/song.png"> 送给好友</a>
 			</div>
 			<p class="p_color">( 已成功送给<span class="recommend_times font_red">{{data.recommend_times}}</span>位好友 )</p>
 			<div class="dun_font">
