--- a/app/wx_share/css/coupon.css
+++ b/app/wx_share/css/coupon.css
@@ -174,6 +174,14 @@ ul{
   width: 50px;
   margin:20px 10px  0 0px;
 }
+.img_gray {
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: gray;
+}
 .success_item{
   background:url(../img/coupon_success.png)  no-repeat ;
   background-size:contain;
