--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -27,7 +27,7 @@
 				<div ng-repeat="item in notice.healthNotices" style="font-size:12px;">{{item}}</div>
 			</a>
 		</li>
-		<li  ng-if="isExtranotice">
+		<li  ng-if="isExtraNotice.length>0">
 			<p >
 				<img src="img/claim_information/logo.jpg">
 				<span>其他限制</span>
