--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -72,7 +72,7 @@
 				<img src="wx_share/img/sports/two_code.jpg">
 			</div>
 		</div>
-		<a class="else_but" href="javascript:">其他高保额极限运动险</a>
+		<a class="else_but" href="/#list">其他高保额极限运动险</a>
 		<div class="kong_div"></div>
 		<div class="padding_img">
 			<div class="churchyard">
