--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -36,6 +36,9 @@
 					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="blue"  ng-if="coupon_id==3">
 					产品条款及投保须知
 					</a>
+					<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/17" class="blue"  ng-if="coupon_id==4">
+					产品条款及投保须知
+					</a>
 				</li>
 			</ul>
 			<div class="bd_part_input ">
@@ -59,18 +62,27 @@
 					<small class="error" ng-show="registration.mobile.$error.maxlength">手机号必须是11位数字</small>
                     <small class="error" ng-show="mobile_server_reason">{{mobile_server_reason}}</small>
 		        </div>
-				<input type="text" class="input_top_padd"style="background: #fff;" placeholder="航班号"  name="flight_no" ng-model="user.flight_no" required>
+				<input type="text" class="input_top_padd" style="background: #fff;" ng-if="coupon_id==1 || coupon_id == 2 || coupon_id==3 " placeholder="航班号"  name="flight_no" ng-model="user.flight_no" required>
 				<div class="cell"  style="color:red" ng-show="registration.flight_no.$dirty && registration.flight_no.$invalid || card_numer_server_reason">
 					<small class="error" ng-show="registration.flight_no.$error.required">航班号必填</small>
 				    <small class="error" ng-show="card_numer_server_reason">{{card_numer_server_reason}}</small>
 				</div>
-				<div class="date_tit">生效日期</div>
-				<input class="last_input" style="background:url(wx_share/img/jian.jpg) no-repeat 95% center #fff;background-size: .17rem .17rem; -webkit-appearance:none;line-height: .48rem;" type="date" placeholder="保障期间" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-model="user.insurance_date" required >
+				<div class="date_tit" >生效时间</div>
+
+
+				<input class="last_input" style="background:url(wx_share/img/jian.jpg) no-repeat 95% center #fff;background-size: .17rem .17rem; -webkit-appearance:none;line-height: .48rem;" type="date" placeholder="保障期间" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-change="genInEffectiveDate()" ng-model="user.insurance_date" required >
+
+
 				<div class="cell"  style="color:red" ng-show="registration.insurance_date.$dirty && registration.insurance_date.$invalid || insurance_date_server_reason">
 	            	<small class="error" ng-show="registration.insurance_date.$error.min">保障日期最早从明天开始</small>
 	            	<small class="error" ng-show="registration.insurance_date.$error.max">保障日期超过最大日期2016年10月26</small>
 	                <small class="error" ng-show="insurance_date_server_reason">{{insurance_date_server_reason}}</small>
 		        </div>
+
+		        <div class="date_tit" ng-if="coupon_id==4">失效时间</div>
+		        <div ng-if="coupon_id==4" style="font-size:15px;padding-left:6px;height: .44rem;border: 1px solid #e2e2e2;background: #fff;line-height: .44rem;padding-left: 16px;font-size: 14px;color: #555;">{{user.inEnd_date | date:'yyyy/MM/dd'}}</div>
+
+                
 				<div class="baofei">保费： 由诺贝保险管家<span class="font_red">免费赠送</span></div>
 			</div>
 			<div class="item">
@@ -83,6 +95,9 @@
 					产品条款及投保须知
 				</a>
 				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/11" class="blue"  ng-if="coupon_id==3">
+					产品条款及投保须知
+				</a>
+				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/17" class="blue"  ng-if="coupon_id==4">
 					产品条款及投保须知
 				</a>
 			</div>
