--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -1,54 +1,21 @@
 <link rel="stylesheet" href="wx_share/css/sports
-.css?rev=gdgdgdfgdfgdf">
+.css?rev=hfdjkhgjdhfjhgj">
 <div class="sports_controller">
 	<div class="ctrl_back"> 
-		<img src="wx_share/img/sports/back.jpg">
-		<div class="fuceng">
-			<!-- <img src="wx_share/img/sports/fuceng.png"> -->
+		<img src="wx_share/img/sports/sports_back_img.jpg" class="back_img" srcset="wx_share/img/sports/sports_back_img2.jpg 568w, wx_share/img/sports/sports_back_img.jpg 667w, wx_share/img/sports/sports_back_img.jpg 736w" >
+		<div class="moneyAndsong layout">
+			<a href="javascript:" class="left" ng-click="sportsAddCoupon()"><img src="wx_share/img/sports/money.png"> 免费领取</a>
+			<a href="javascript:" class="right" ng-click="showShareTip()"><img src="wx_share/img/sports/song.png"> 送给好友</a>
 		</div>
-		<div class="layer_1">
-			<img src="wx_share/img/sports/layer_1.png">
-		</div>
-		<div class="layer_2">
-			<img src="wx_share/img/sports/layer_2.png">
-		</div>
-		<div class="layer_3">
-			<img src="wx_share/img/sports/layer_3.png">
-		</div>
-		<div class="layer_word">
-			<img src="wx_share/img/sports/ku_word.png">
+		<div class="sheng">
+			<span class="left remain_times">剩余 {{data.remain_times}}  张未领取</span>
+			<span class="right recommend_times">已送给 {{data.recommend_times}} 位好友</span>
 		</div>
 	</div>
-	<div class="sports_font">
-		<p>诺贝重磅推出</p>
-		<p>首款极限运动保险</p>
-	</div>
-	<div class="sports_bot_ctl">
-		<img class="img_wh" src="wx_share/img/sports/bot_back_2.png">
-		<div class="sports_bot">
-			<div class="bot_head layout">
-				<img class="tp left" src="wx_share/img/sports/tp.png">
-				<img class="wuwan right" src="wx_share/img/sports/wuwan.png">
-			</div>
-			<div class="peifu_lablel">
-				<div class="left" >保障责任：</div>
-				<div class="right auto_wid">
-					极限运动导致意外身故或伤残赔付保险金10万元</br>极限运动意外医疗保险金1万元
-				</div>
-			</div> 
-			<div class="moneyAndsong layout">
-				<a href="javascript:" class="left" ng-click="sportsAddCoupon()"><img src="wx_share/img/my_bd/money.png"> 免费领取</a>
-				<a href="javascript:" class="right" ng-click="showShareTip()"><img src="wx_share/img/my_bd/song.png"> 送给好友</a>
-			</div>
-			<div class="sheng">
-				<span class="left remain_times">剩余 {{data.remain_times}}  张未领取</span>
-				<span class="right recommend_times">已送给 {{data.recommend_times}} 位好友</span>
-			</div>
-		</div>	
-	</div>
+		
 	<div class="alt_font">
-		<div class="padd_top10"><img src="wx_share/img/sports/logo.jpg"> 每月均可无条件免费领取1份，无惧任何挑战.</div>
-		<div class="padd_bot69"><img src="wx_share/img/sports/logo.jpg"> 每成功送给1位好友，即可再免费领取1份。</br>&nbsp;&nbsp;&nbsp;约上朋友一起突破极吧！</div>
+		<div class="padd_top10"><img src="wx_share/img/sports/dun.png"> 每月均可无条件免费领取1份，无惧任何挑战.</div>
+		<div class="padd_bot69"><img src="wx_share/img/sports/dun.png"> 每成功送给1位好友，即可再免费领取1份。</div>
 		<div class="range">保障范围</div>
 		<img src="wx_share/img/sports/fanwei.jpg">
 		<div class="sort_ctrl">
@@ -59,13 +26,13 @@
 		</div>
 		<div class="font_controller layout">
 		    <p>
-				<img src="wx_share/img/sports/logo.jpg">  领取后请前往微信号 [ 诺贝 ] 投保
+				<img src="wx_share/img/sports/dun.png">  领取后请前往微信号 [ 诺贝 ] 投保
 	        </p>
 			<div class="main_font left">
 				
 				<li>1.长按右侧二维码关注 [诺贝]</li>
 				<li>2.在微信号底部菜单  [ 我的保险劵 ] 投保</li>
-				<li>3.有效期：2016.04.26 ~ 07.26</li>
+				<li>3.有效期：2016.06.28 ~ 12.28</li>
 			</div>
 			<!-- 二维码 -->
 			<div class="two_code right">
@@ -80,7 +47,7 @@
 				<div class="churchyard_word">
 					<p class="word_head">极限运动保险-境内版<span class="right">20 元</span></p>
                     <p >运动意外身故、伤残保障： 20~60万元</p>
-                    <p>运动意外伤害医疗： 3~5元</p>
+                    <p>运动意外伤害医疗： 3~5万元</p>
                     <p>同时提供专业紧急救援、行李丢失赔付等服务</p>
 				</div>
 				<a href="/#detail?product_id=94"><div class="buy_but">立即购买</div></a>
