--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -19,20 +19,19 @@
 		<div class="range">保障范围</div>
 		<img src="wx_share/img/sports/fanwei.jpg">
 		<div class="sort_ctrl">
-			<p class="sort">冲浪、蹦极、登山、跳伞登12项保障</p>
+			<p class="sort">冲浪、蹦极、登山、跳伞等多项保障</p>
 			<p class="color_black">为极限运动者提供全面保障</p>
 			<p>运动意外身故、伤残保障：10万元</p>
 			<p>运动意外医疗：1万元&nbsp;&nbsp;&nbsp;&nbsp;保障期间三天</p>
 		</div>
 		<div class="font_controller layout">
 		    <p>
-				<img src="wx_share/img/sports/dun.png">  领取后请前往微信号 [ 诺贝 ] 投保
+		    	<img src="wx_share/img/sports/dun.png">  领取后请前往微信号 [ 诺贝 ] 投保
 	        </p>
 			<div class="main_font left">
-				
 				<li>1.长按右侧二维码关注 [诺贝]</li>
 				<li>2.在微信号底部菜单  [ 我的保险劵 ] 投保</li>
-				<li>3.有效期：2016.06.28 ~ 12.28</li>
+				<li>3.活动有效期：2016.06.28 ~ 12.28</li>
 			</div>
 			<!-- 二维码 -->
 			<div class="two_code right">
@@ -42,7 +41,8 @@
 		<a class="else_but" href="javascript:">其他高保额极限运动险</a>
 		<div class="kong_div"></div>
 		<div class="padding_img">
-			<div class="churchyard">
+			<a href="/#detail?product_id=94">
+				<div class="churchyard">
 				<img src="wx_share/img/sports/churchyard.png">
 				<div class="churchyard_word">
 					<p class="word_head">极限运动保险-境内版<span class="right">20 元</span></p>
@@ -50,17 +50,20 @@
                     <p>运动意外伤害医疗： 3~5万元</p>
                     <p>同时提供专业紧急救援、行李丢失赔付等服务</p>
 				</div>
-				<a href="/#detail?product_id=94"><div class="buy_but">立即购买</div></a>
+				<div class="buy_but">立即购买</div>
+			</a>
 			</div>
 			<div class="kong_div"></div>
-			<div class="overseas">
-				<img src="wx_share/img/sports/overseas.png">
-				<div class="overseas_word">
-					<p class="word_head">极限运动保险-全球版<span class="right">105 元起</span></p>
-	                <div>全面保障境内外潜水、滑雪、攀岩等级活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
-				</div>
-				<a href="/#detail?product_id=64"><div class="buy_but">立即购买</div></a>
-			</div>
+			<a href="/#detail?product_id=64">
+				<div class="overseas">
+					<img src="wx_share/img/sports/overseas.png">
+					<div class="overseas_word">
+						<p class="word_head">极限运动保险-全球版<span class="right">105 元起</span></p>
+		                <div>全面保障境内外潜水、滑雪、攀岩等级活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
+					</div>
+					<div class="buy_but">立即购买</div>
+			    </div>
+			</a>
 		</div>
 	</div>
 </div>
