--- a/app/wx_share/partials/jixian.html
+++ b/app/wx_share/partials/jixian.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="wx_share/css/sports
-.css?rev=hfdjkhgjdhfjhgj">
+.css?rev=dfghdfg">
 <div class="sports_controller">
 	<div class="ctrl_back"> 
 		<img src="wx_share/img/sports/sports_back_img.jpg" class="back_img" srcset="wx_share/img/sports/sports_back_img2.jpg 568w, wx_share/img/sports/sports_back_img.jpg 667w, wx_share/img/sports/sports_back_img.jpg 736w" >
@@ -14,7 +14,7 @@
 	</div>
 		
 	<div class="alt_font">
-		<div class="padd_top10"><img src="wx_share/img/sports/dun.png"> 每月均可无条件免费领取1份，无惧任何挑战.</div>
+		<div class="padd_top10"><img src="wx_share/img/sports/dun.png"> 每月均可无条件免费领取1份，无惧任何挑战。</div>
 		<div class="padd_bot69"><img src="wx_share/img/sports/dun.png"> 每成功送给1位好友，即可再免费领取1份。</div>
 		<div class="range">保障范围</div>
 		<img src="wx_share/img/sports/fanwei.jpg">
@@ -22,7 +22,8 @@
 			<p class="sort">冲浪、蹦极、登山、跳伞等多项保障</p>
 			<p class="color_black">为极限运动者提供全面保障</p>
 			<p>运动意外身故、伤残保障：10万元</p>
-			<p>运动意外医疗：1万元&nbsp;&nbsp;&nbsp;&nbsp;保障期间三天</p>
+			<p>运动意外医疗：1万元</p>
+			<p>保障期间：三天</p>
 		</div>
 		<div class="font_controller layout">
 		    <p>
@@ -59,7 +60,7 @@
 					<img src="wx_share/img/sports/overseas.png">
 					<div class="overseas_word">
 						<p class="word_head">极限运动保险-全球版<span class="right">105 元起</span></p>
-		                <div>全面保障境内外潜水、滑雪、攀岩等级活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
+		                <div>全面保障境内外潜水、滑雪、攀岩等极限活动，包含突发意外、疾病、个人财产、旅行延误等、保额高达100万。同时提供专业的紧急救援</div>
 					</div>
 					<div class="buy_but">立即购买</div>
 			    </div>
