--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/bd_education.css?rev=hsfgdsfdshfdsf">
+<link rel="stylesheet" href="css/bd_education.css?rev=jghfjhjdjgd">
 <header class="icon_{{type}}">
 	我的{{getInsuranceCNname()}}保障
 	<span ng-click="goBdmList()">{{data.aggregate_score}}分 <img src="img/arrow_03.jpg" class="arrow"></span>
