--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -30,7 +30,9 @@ body{
 
 .fix_container .left{
   color:#1e4e8e;
-  background-color:#f0f0f0 ;margin-right:50%;width:auto;border-radius: 0;
+  background-color:#1e4e8e ;margin-right:50%;width:auto;border-radius: 0;
+  color: #fff;
+  border-right: 1px solid #13325c;
 }
 .select_btn {
   height: 48px;
