--- a/app/template/product_94.html
+++ b/app/template/product_94.html
@@ -1,6 +1,6 @@
 <div class="detail-container">
   <div>
-    <img src="img/product/jxydhd01.jpg" ></div>
+    <img src="img/product/jxydjn03.png" ></div>
 </div>
   <div class="line"></div>
   <h4>
